Fix for Bug #28964 fread "greedy" behaviour